- Menú navegación. - Vistas mensaje enviado - Traducción de la validación del formulario - Vista WHS

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Logo Ascii
   <link href="css/base.css" rel="stylesheet" type="text/css">
   <!--Slick Carousel-->
   <link rel="stylesheet" type="text/css" href="css/slick.css" />
-  <!--Slick Carousel-->
+  <!--Form input validation-->
   <script language="JavaScript" src="js/gen_validatorv31.js" type="text/javascript"></script>
 </head>
 
@@ -37,7 +37,7 @@ Logo Ascii
     <section id="ini" class="line">
       <div class="stories line"></div>
       <div id="nos"></div>
-      <canvas class="anim">&nbsp;</canvas>
+      <canvas class="ini">&nbsp;</canvas>
     </section>
     <section id="hac" class="line"></section>
     <section id="por-ini" class="line"></section>
@@ -58,7 +58,6 @@ Logo Ascii
   <script src="js/builder.js"></script>
   <script>
     // Sections creation and renderization
-
     const Nav = new SectionTemplate();
     Nav.sectionHeader(navigation, '#nav', 'navigation');
 
