--- a/portafolio.html
+++ b/portafolio.html
@@ -23,7 +23,7 @@ Logo Ascii
   <link href="css/base.css" rel="stylesheet" type="text/css">
   <!--Slick Carousel-->
   <link rel="stylesheet" type="text/css" href="css/slick.css" />
-  <!--Slick Carousel-->
+  <!--Form input validation-->
   <script language="JavaScript" src="js/gen_validatorv31.js" type="text/javascript"></script>
 </head>
 
@@ -34,8 +34,9 @@ Logo Ascii
       <div class="logo"></div>
       <div class="sm"></div>
     </header>
-    <section id="ini">
-      <div class="stories line"></div>
+    <section id="ini" class="line">
+      <div class="stories"></div>
+      <canvas><p>lalalala</p></canvas>
     </section>
     <section id="por" class="line"></section>
     <footer>
@@ -67,7 +68,8 @@ Logo Ascii
     $('p:contains("undefined")').remove();
     $('a[href*="undefined"]').remove();
 
-    $('nav ul.tabs a.btn[href^="#"]').on('click', function(event) {
+    // Scrolling for all anchors on the page
+    $( 'nav ul.tabs a.btn[href^="#"]').on('click', function(event) {
       var target = $(this.getAttribute('href'));
       if( target.length ) {
           event.preventDefault();
@@ -89,9 +91,7 @@ Logo Ascii
       });
     });
   </script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="js/slick.min.js"></script>
+
 </body>
 
 </html>
