--- a/portafolio.html
+++ b/portafolio.html
@@ -25,9 +25,12 @@ Logo Ascii
   <link rel="stylesheet" type="text/css" href="css/slick.css" />
   <!--Form input validation-->
   <script language="JavaScript" src="js/gen_validatorv31.js" type="text/javascript"></script>
+
+  <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
+  <script src="js/portafolio.js"></script>
 </head>
 
-<body>
+<body onload="init()">
   <nav id="nav"></nav>
   <main class="container">
     <header>
@@ -36,7 +39,11 @@ Logo Ascii
     </header>
     <section id="ini" class="line">
       <div class="stories"></div>
-      <canvas><p>lalalala</p></canvas>
+      <div class="canvasContainer">
+        <canvas id="bra"></canvas>
+        <canvas id="web"></canvas>
+        <canvas id="log"></canvas>
+      </div>
     </section>
     <section id="por" class="line"></section>
     <footer>
@@ -62,6 +69,7 @@ Logo Ascii
     SectionPorIni.tabContent(portafolio, '#por');
     SectionPorIni.tabItems(portafolio, 9);
     SectionPorIni.tabsFocus('.orangebg-1', '.orangebg-2', '.orangebg-3');
+    SectionPorIni.tabsFocusAnimation('.orangebg-1', '.orangebg-2', '.orangebg-3', 'canvas#bra', 'canvas#web', 'canvas#log')
 
     // Catching and removing empty and undefined elements
     $("a.section-link").remove();
