--- a/portafolio.html
+++ b/portafolio.html
@@ -21,16 +21,14 @@ Logo Ascii
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <!--Main styles-->
   <link href="css/base.css" rel="stylesheet" type="text/css">
-  <!--Slick Carousel-->
-  <link rel="stylesheet" type="text/css" href="css/slick.css" />
   <!--Form input validation-->
   <script language="JavaScript" src="js/gen_validatorv31.js" type="text/javascript"></script>
-
+  <!--CreateJS-->
   <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-  <script src="js/portafolio.js"></script>
+  <!-- <script src="js/portafolio.js"></script> -->
 </head>
 
-<body onload="init()">
+<body>
   <div id="hamburguer" onclick="openNav()">&#9776;</div>
   <nav id="nav"></nav>
   <main class="container">
