--- a/thank-you.html
+++ b/thank-you.html
@@ -21,18 +21,20 @@ Logo Ascii
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <!--Main styles-->
   <link href="css/base.css" rel="stylesheet" type="text/css">
+  <!--Create JS-->
+  <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
+  <script src="js/contacto.js"></script>
 </head>
 
-<body>
+<body onload="init();">
   <main class="container">
     <header>
       <div class="logo"></div>
       <div class="sm"></div>
     </header>
-    <section id="ini" class="line">
+    <section id="ini">
       <div class="stories line"></div>
-      <div id="nos"></div>
-      <canvas class="anim">&nbsp;</canvas>
+      <canvas id="con"></canvas>
     </section>
   </main>
   <script src="js/jquery-1.8.3.js"></script>
