- Fontastic generated icons fix - General responsive styles - Layout and styles fixes

--- a/portafolio.html
+++ b/portafolio.html
@@ -92,8 +92,8 @@ Logo Ascii
       });
     });
     // Sidebar menu functions
-    $('#navigation').prepend('<li class="btn" onclick="closeNav()"><a class="btn"><i class="fas fa-times-circle"></i></a></li>')
-    function openNav() {$('#nav').css('width','45px');}
+    $('#navigation').prepend('<li class="btn menu" onclick="closeNav()"><a class="btn"><i class="fas fa-times-circle"></i></a></li>')
+    function openNav() {$('#nav').css('width','50px');}
     function closeNav() {$('#nav').css('width','0');}
   </script>
 
