--- a/thank-you.html
+++ b/thank-you.html
@@ -24,9 +24,11 @@ Logo Ascii
   <!--Create JS-->
   <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
   <script src="js/contacto.js"></script>
+  <style>nav{ visibility: hidden;}</style>
 </head>
 
 <body onload="init();">
+  <nav id="nav"></nav>
   <main class="container">
     <header>
       <div class="logo"></div>
