--- a/whs.html
+++ b/whs.html
@@ -21,8 +21,6 @@ Logo Ascii
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <!--Main styles-->
   <link href="css/base.css" rel="stylesheet" type="text/css">
-  <!--Slick Carousel-->
-  <link rel="stylesheet" type="text/css" href="css/slick.css" />
   <!--Form input validation-->
   <script language="JavaScript" src="js/gen_validatorv31.js" type="text/javascript"></script>
 
@@ -35,9 +33,8 @@ Logo Ascii
       <div class="logo"></div>
       <div class="sm"></div>
     </header>
-    <section id="ini" class="line">
+    <section id="iniPor" class="line">
       <div class="stories"></div>
-      <canvas><p>lalalala</p></canvas>
     </section>
     <section id="whs" class="line"></section>
     <footer>
