-Minor style fixes

--- a/thank-you.html
+++ b/thank-you.html
@@ -54,7 +54,7 @@ Logo Ascii
     $('a[href*="undefined"]').remove();
 
     // Redirection to home page
-    window.setTimeout('window.open("index.html#con","_self")',5000);
+    // window.setTimeout('window.open("index.html#con","_self")',7000);
 
 
   </script>
