- Facebook opengraph - Ascii image

--- a/portafolio.html
+++ b/portafolio.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html>
 <!--
-Logo Ascii
+           .77777777..
+        ...7777777777...                                                                    .
+         ..7777 ..7777..                                                                    .OOZ
+.. .. .....7777 ..7777..       .      . .   .         ..  . .   .    ..  .          .  .    7OOO ..
+.77777777,.7777777777...OO:OOOO,     .$OOOI   :OO.   =OO... OOOO+.   $O7OOOO.    . ?OOOO .  7OOOOOZ
+7777777777..77777777~. +OOOOOOZOO.. ?OOOOOOO~ OOOO . OOOO.OOOOOOOO  .OOOOOOOOO ..,OOOOOOZZ. 7OOOOOOO
+777:   7777....,=....  +OOOO~?OOOO OOOO7:ZOOOO.OOOO OOOO OOOO?=OOOO .OOOO?=OOOO 7OOOO:?OOOO 7OOOO:
+777: ..7777....:=.... .+OOO   ?OOO OOOO   OOOO ?OOOOZOO..OOO=   OOO:.OOO+   OOO:OOOO  :OOOO 7OOO .
+7777777777..77777777~..+OOO   +OOO OOOO$:OOOOO  OOOOOO+  OOOO?=OOOO: OOO+   OOO:7OOOOOOOO=  7OOO
+.77777777~.7777777777,.+OOO ..+OOO  OOOOOOOOZ    OOOO=  ..ZOZOOOOOO: OOO+.  OOO: 7OOOOOOOOZ 7ZOO
+  ..,:.....7777...7777..OO:    7O7    $OOO7      .ZO=   .. .OOOO=OO .$O7    ZZO    ?OOOOOO7. OO?
+  ... .. ..7777 ..7777..     .  .       .  .        .    ..   ..    .  ..         .      .  .  .
+        . .7777777777.
+        . ..77777777...
+          . ..,?7=..
 -->
 
 <head>
-  <title>novanet - diseño multimedia</title>
+  <title>novanet - estudio de diseño</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="description" content="Estudio de diseño multimedios" />
+  <meta name="Keywords" content="Diseño gráfico, páginas web, integración tecnologías." />
+  <!--FB opengraph-->
+  <meta property="og:image" content="http://www.gruponovanet.com.ve/site/img/og-thumbnail.png" />
+  <meta property="og:title" content="Novanet - Estudio de diseño integral" />
+  <meta property="og:url" content="http://www.gruponovanet.com.ve/" />
+  <meta property="og:site_name" content="Novanet - Estudio de diseño integral." />
+  <meta property="og:description" content="Creamos historia de éxito." />
+  <meta property="og:type" content="website" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="El buen diseño es garantía de exito en tu negocio." />
-  <meta name="author" content="">
   <!--favicon-->
   <link rel="shortcut icon" href="favicon.ico">
   <!--GoogleFont-->
