--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html>
 <!--
-Logo Ascii
+           .77777777..
+        ...7777777777...                                                                    .
+         ..7777 ..7777..                                                                    .OOZ
+.. .. .....7777 ..7777..       .      . .   .         ..  . .   .    ..  .          .  .    7OOO ..
+.77777777,.7777777777...OO:OOOO,     .$OOOI   :OO.   =OO... OOOO+.   $O7OOOO.    . ?OOOO .  7OOOOOZ
+7777777777..77777777~. +OOOOOOZOO.. ?OOOOOOO~ OOOO . OOOO.OOOOOOOO  .OOOOOOOOO ..,OOOOOOZZ. 7OOOOOOO
+777:   7777....,=....  +OOOO~?OOOO OOOO7:ZOOOO.OOOO OOOO OOOO?=OOOO .OOOO?=OOOO 7OOOO:?OOOO 7OOOO:
+777: ..7777....:=.... .+OOO   ?OOO OOOO   OOOO ?OOOOZOO..OOO=   OOO:.OOO+   OOO:OOOO  :OOOO 7OOO .
+7777777777..77777777~..+OOO   +OOO OOOO$:OOOOO  OOOOOO+  OOOO?=OOOO: OOO+   OOO:7OOOOOOOO=  7OOO
+.77777777~.7777777777,.+OOO ..+OOO  OOOOOOOOZ    OOOO=  ..ZOZOOOOOO: OOO+.  OOO: 7OOOOOOOOZ 7ZOO
+  ..,:.....7777...7777..OO:    7O7    $OOO7      .ZO=   .. .OOOO=OO .$O7    ZZO    ?OOOOOO7. OO?
+  ... .. ..7777 ..7777..     .  .       .  .        .    ..   ..    .  ..         .      .  .  .
+        . .7777777777.
+        . ..77777777...
+          . ..,?7=..
 -->
 
 <head>
-  <title>novanet - diseño multimedia</title>
+  <title>novanet - estudio de diseño</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="description" content="Estudio de diseño multimedios" />
+  <meta name="Keywords" content="Diseño gráfico, páginas web, integración tecnologías." />
+  <!--FB opengraph-->
+  <meta property="og:image" content="http://www.gruponovanet.com.ve/site/img/og-thumbnail.png" />
+  <meta property="og:title" content="Novanet - Estudio de diseño integral" />
+  <meta property="og:url" content="http://www.gruponovanet.com.ve/" />
+  <meta property="og:site_name" content="Novanet - Estudio de diseño integral." />
+  <meta property="og:description" content="Creamos historia de éxito." />
+  <meta property="og:type" content="website" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="El buen diseño es garantía de exito en tu negocio." />
-  <meta name="author" content="">
   <!--favicon-->
   <link rel="shortcut icon" href="favicon.ico">
   <!--GoogleFont-->
@@ -21,6 +42,15 @@ Logo Ascii
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <!--Main styles-->
   <link href="css/base.css" rel="stylesheet" type="text/css">
+  <!--if lt IE 9-->
+  <!--[if lt IE 9]>
+      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/livingston-css3-mediaqueries-js/1.0.0/css3-mediaqueries.js"></script>
+      <style type="text/css">
+        .container { display:table; width: 100%;}
+        .row { height: 100%; display: table-row;}
+        .col-sm-4 { display: table-cell;}
+      </style>
+  <![endif]-->
   <!--Form input validation-->
   <script language="JavaScript" src="js/gen_validatorv31.js" type="text/javascript"></script>
   <!--Instagram responsive feed from https://lightwidget.com/-->
@@ -167,6 +197,15 @@ Logo Ascii
     frmvalidator.addValidation("name", "req", "Por favor introduce tu nombre");
     frmvalidator.addValidation("email", "req", "Por favor introduce tu email");
     frmvalidator.addValidation("email", "email", "Por favor introduce uan dirección de correo válida");
+  </script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-15832718-1', 'auto');
+    ga('send', 'pageview');
   </script>
 </body>
 
