--- a/thank-you.html
+++ b/thank-you.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html>
 <!--
-Logo Ascii
+           .77777777..
+        ...7777777777...                                                                    .
+         ..7777 ..7777..                                                                    .OOZ
+.. .. .....7777 ..7777..       .      . .   .         ..  . .   .    ..  .          .  .    7OOO ..
+.77777777,.7777777777...OO:OOOO,     .$OOOI   :OO.   =OO... OOOO+.   $O7OOOO.    . ?OOOO .  7OOOOOZ
+7777777777..77777777~. +OOOOOOZOO.. ?OOOOOOO~ OOOO . OOOO.OOOOOOOO  .OOOOOOOOO ..,OOOOOOZZ. 7OOOOOOO
+777:   7777....,=....  +OOOO~?OOOO OOOO7:ZOOOO.OOOO OOOO OOOO?=OOOO .OOOO?=OOOO 7OOOO:?OOOO 7OOOO:
+777: ..7777....:=.... .+OOO   ?OOO OOOO   OOOO ?OOOOZOO..OOO=   OOO:.OOO+   OOO:OOOO  :OOOO 7OOO .
+7777777777..77777777~..+OOO   +OOO OOOO$:OOOOO  OOOOOO+  OOOO?=OOOO: OOO+   OOO:7OOOOOOOO=  7OOO
+.77777777~.7777777777,.+OOO ..+OOO  OOOOOOOOZ    OOOO=  ..ZOZOOOOOO: OOO+.  OOO: 7OOOOOOOOZ 7ZOO
+  ..,:.....7777...7777..OO:    7O7    $OOO7      .ZO=   .. .OOOO=OO .$O7    ZZO    ?OOOOOO7. OO?
+  ... .. ..7777 ..7777..     .  .       .  .        .    ..   ..    .  ..         .      .  .  .
+        . .7777777777.
+        . ..77777777...
+          . ..,?7=..
 -->
 
 <head>
