--- a/portafolio.html
+++ b/portafolio.html
@@ -28,7 +28,7 @@
   <meta property="og:title" content="Novanet - Estudio de diseño integral" />
   <meta property="og:url" content="http://www.gruponovanet.com.ve/" />
   <meta property="og:site_name" content="Novanet - Estudio de diseño integral." />
-  <meta property="og:description" content="Creamos historia de éxito." />
+  <meta property="og:description" content="Creamos historias de éxito." />
   <meta property="og:type" content="website" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
