--- a/portafolio.html
+++ b/portafolio.html
@@ -26,7 +26,7 @@
   <!--FB opengraph-->
   <meta property="og:image" content="http://www.gruponovanet.com.ve/site/img/og-thumbnail.png" />
   <meta property="og:title" content="Novanet - Estudio de diseño integral" />
-  <meta property="og:url" content="http://www.gruponovanet.com.ve/" />
+  <meta property="og:url" content="http://www.gruponovanet.com.ve/site/" />
   <meta property="og:site_name" content="Novanet - Estudio de diseño integral." />
   <meta property="og:description" content="Creamos historias de éxito." />
   <meta property="og:type" content="website" />
