--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <![endif]-->
   <!--Form input validation-->
   <!--Instagram responsive feed from https://lightwidget.com/-->
-  <script src="js/topscript.js"></script>
+  <script src="js/topscript.js.gz"></script>
 </head>
 
 <body onload="init();">
@@ -81,7 +81,7 @@
       <div class="sm"></div>
     </footer>
   </main>
-  <script src="js/botscript.js"></script>
+  <script src="js/botscript.js.gz"></script>
   <script>
     // Sections creation and renderization
     const Nav = new SectionTemplate();
