--- a/thank-you.html
+++ b/thank-you.html
@@ -19,26 +19,39 @@
 -->
 
 <head>
-  <title>novanet - diseño multimedia</title>
+  <title>novanet - estudio de diseño</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="description" content="Estudio de diseño multimedios" />
+  <meta name="Keywords" content="Diseño gráfico, páginas web, integración tecnologías." />
+  <!--FB opengraph-->
+  <meta property="og:image" content="http://www.gruponovanet.com.ve/site/img/og-thumbnail.png" />
+  <meta property="og:title" content="Novanet - Estudio de diseño integral" />
+  <meta property="og:url" content="http://www.gruponovanet.com.ve/site/" />
+  <meta property="og:site_name" content="Novanet - Estudio de diseño integral." />
+  <meta property="og:description" content="Creamos historias de éxito." />
+  <meta property="og:type" content="website" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="El buen diseño es garantía de exito en tu negocio." />
-  <meta name="author" content="">
   <!--favicon-->
   <link rel="shortcut icon" href="favicon.ico">
   <!--GoogleFont-->
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,600,700,800,900" rel="stylesheet">
   <!--FontAwesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
-  <!--Normalize-->
-  <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <!--Main styles-->
-  <link href="css/base.css" rel="stylesheet" type="text/css">
-  <!--Create JS-->
-  <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-  <script src="js/contacto.js"></script>
-  <style>nav{ visibility: hidden;}</style>
+  <!--Styles-->
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <!--if lt IE 9-->
+  <!--[if lt IE 9]>
+      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/livingston-css3-mediaqueries-js/1.0.0/css3-mediaqueries.js"></script>
+      <style type="text/css">
+        .container { display:table; width: 100%;}
+        .row { height: 100%; display: table-row;}
+        .col-sm-4 { display: table-cell;}
+      </style>
+  <![endif]-->
+  <!--Form input validation-->
+  <!--Instagram responsive feed from https://lightwidget.com/-->
+  <script src="js/topscript.js.gz"></script>
 </head>
 
 <body onload="init();">
@@ -53,10 +66,7 @@
       <canvas id="con"></canvas>
     </section>
   </main>
-  <script src="js/jquery-1.8.3.js"></script>
-  <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
-  <script src="js/helper.js"></script>
-  <script src="js/builder.js"></script>
+  <script src="js/botscript.js.gz"></script>
   <script>
     // Sections creation and renderization
     const storiesPrint = new StoriesTemplate();
@@ -68,9 +78,8 @@
     $('a[href*="undefined"]').remove();
 
     // Redirection to home page
-    window.setTimeout('window.open("index.html#con","_self")',7000);
-
-
+    window.setTimeout('window.open("index.html#con","_self")', 7000);
   </script>
 </body>
+
 </html>
