--- a/whs.html
+++ b/whs.html
@@ -19,7 +19,7 @@
 -->
 
 <head>
-  <title>novanet - estudio de diseño</title>
+  <title>novanet - portafolio</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="description" content="Estudio de diseño multimedios" />
   <meta name="Keywords" content="Diseño gráfico, páginas web, integración tecnologías." />
@@ -38,12 +38,20 @@
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,600,700,800,900" rel="stylesheet">
   <!--FontAwesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
-  <!--Normalize-->
-  <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <!--Main styles-->
-  <link href="css/base.css" rel="stylesheet" type="text/css">
+  <!--Styles-->
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <!--if lt IE 9-->
+  <!--[if lt IE 9]>
+      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/livingston-css3-mediaqueries-js/1.0.0/css3-mediaqueries.js"></script>
+      <style type="text/css">
+        .container { display:table; width: 100%;}
+        .row { height: 100%; display: table-row;}
+        .col-sm-4 { display: table-cell;}
+      </style>
+  <![endif]-->
   <!--Form input validation-->
-  <script language="JavaScript" src="js/gen_validatorv31.js" type="text/javascript"></script>
+  <!--Instagram responsive feed from https://lightwidget.com/-->
+  <script src="js/topscript.js.gz"></script>
 </head>
 
 <body>
@@ -63,10 +71,7 @@
       <div class="sm"></div>
     </footer>
   </main>
-  <script src="js/jquery-1.8.3.js"></script>
-  <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
-  <script src="js/helper.js"></script>
-  <script src="js/builder.js"></script>
+  <script src="js/botscript.js.gz"></script>
   <script>
     // Sections creation and renderization
     const Nav = new SectionTemplate();
@@ -87,13 +92,13 @@
     $('a[href*="undefined"]').remove();
 
     // Scrolling for all anchors on the page
-    $( 'nav ul.tabs a.btn[href^="#"]').on('click', function(event) {
+    $('nav ul.tabs a.btn[href^="#"]').on('click', function(event) {
       var target = $(this.getAttribute('href'));
-      if( target.length ) {
-          event.preventDefault();
-          $('html, body').stop().animate({
-              scrollTop: target.offset().top
-          }, 1000);
+      if (target.length) {
+        event.preventDefault();
+        $('html, body').stop().animate({
+          scrollTop: target.offset().top
+        }, 1000);
       }
     });
 
