--- a/thank-you.html
+++ b/thank-you.html
@@ -51,7 +51,7 @@
   <![endif]-->
   <!--Form input validation-->
   <!--Instagram responsive feed from https://lightwidget.com/-->
-  <script src="js/topscript.js.gz"></script>
+  <script src="js/contop.js.gz"></script>
 </head>
 
 <body onload="init();">
@@ -66,7 +66,7 @@
       <canvas id="con"></canvas>
     </section>
   </main>
-  <script src="js/botscript.js.gz"></script>
+  <script src="js/bot.js.gz"></script>
   <script>
     // Sections creation and renderization
     const storiesPrint = new StoriesTemplate();
@@ -78,7 +78,7 @@
     $('a[href*="undefined"]').remove();
 
     // Redirection to home page
-    window.setTimeout('window.open("index.html#con","_self")', 7000);
+    // window.setTimeout('window.open("index.html#con","_self")', 7000);
   </script>
 </body>
 
