--- a/whs.html
+++ b/whs.html
@@ -51,7 +51,7 @@
   <![endif]-->
   <!--Form input validation-->
   <!--Instagram responsive feed from https://lightwidget.com/-->
-  <script src="js/topscript.js.gz"></script>
+
 </head>
 
 <body>
@@ -71,7 +71,7 @@
       <div class="sm"></div>
     </footer>
   </main>
-  <script src="js/botscript.js.gz"></script>
+  <script src="js/bot.js.gz"></script>
   <script>
     // Sections creation and renderization
     const Nav = new SectionTemplate();
