--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
   <meta property="og:type" content="website" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!-- Google Analytics Search Console -->
+  <meta name="google-site-verification" content="VrkyqyOtFR17t1XosJ2gMN6Ci1nsHv_NjfK6Kv_ziZs" />
   <!--favicon-->
   <link rel="shortcut icon" href="favicon.ico">
   <!--GoogleFont-->
