Gulp - Tooltip fixes in views

--- a/thank-you.html
+++ b/thank-you.html
@@ -51,7 +51,7 @@
   <![endif]-->
   <!--Form input validation-->
   <!--Instagram responsive feed from https://lightwidget.com/-->
-  <script src="js/contop.js.gz"></script>
+  <script src="js/contop.js"></script>
 </head>
 
 <body onload="init();">
@@ -66,7 +66,7 @@
       <canvas id="con"></canvas>
     </section>
   </main>
-  <script src="js/bot.js.gz"></script>
+  <script src="js/botscript.js"></script>
   <script>
     // Sections creation and renderization
     const storiesPrint = new StoriesTemplate();
