--- a/portafolio.html
+++ b/portafolio.html
@@ -51,6 +51,7 @@
   <![endif]-->
   <!--Form input validation-->
   <!--Instagram responsive feed from https://lightwidget.com/-->
+  <script src="js/topscript.js"></script>
 </head>
 
 <body>
@@ -71,7 +72,7 @@
       <div class="sm"></div>
     </footer>
   </main>
-  <script src="js/bot.js.gz"></script>
+  <script src="js/botscript.js"></script>
   <script>
     // Sections creation and renderization
     const Nav = new SectionTemplate();
