--- a/index.html
+++ b/index.html
@@ -125,16 +125,7 @@
     // Catching and removing empty and undefined elements
     $('p:contains("undefined")').remove();
     $('a[href*="undefined"]').remove();
-    $('.thumbs').on('click', 'a.btn', function(e) {
-      e.preventDefault();
-      let imgPath = $(this).attr('href');
-      let modalRender = '<div id="myModal" class="modal"><div class="modal-content"><span class="close">&times;</span><img class="preview" src="' + imgPath + '"></div></div>';
-      $('.container').append(modalRender);
-      $('#myModal').css('display', 'block');
-      $('span.close').click(function() {
-        $('#myModal').remove();
-      });
-    });
+    $('span.tooltiptext:contains("undefined")').remove();    
 
     // Scrolling for all anchors on the page
     $('nav ul.tabs a.btn[href^="#"]').on('click', function(event) {
