--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <![endif]-->
   <!--Form input validation-->
   <!--Instagram responsive feed from https://lightwidget.com/-->
-  <script src="js/indextop.js"></script>
+  <script src="js/topscript.js"></script>
 </head>
 
 <body onload="init();">
@@ -85,7 +85,7 @@
       <div class="sm"></div>
     </footer>
   </main>
-  <script src="js/bot.js"></script>
+  <script src="js/botscript.js"></script>
   <script>
     // Sections creation and renderization
     const Nav = new SectionTemplate();
