--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
         }
       </style>
     <![endif]-->
-    <!--Form input validation-->
+    <!--Pinterest domain verification-->
+    <meta name="p:domain_verify" content="04d8df29f1a3081233afe2ffecf70fc9"/>
     <!--Instagram responsive feed from https://lightwidget.com/-->
     <script src="js/topscript.js"></script>
   </head>
